--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Bejeweled by TC</title>
   <link rel="stylesheet" href="styles.css" />
-  <style>
-  body {
-    background-color: red !important;
-  }
-</style>
+ 
+<link rel="stylesheet" href="styles.css"/>
 
 </head>
 
