--- a/index.html
+++ b/index.html
@@ -23,14 +23,44 @@
     </nav>
   </header>
 
-  <!-- Hero Section -->
+  <!-- Hero Section -
   <section id="home" class="hero-section">
     <div class="hero-content">
       <h1 class="hero-title">Welcome to Bejeweled by TC</h1>
       <p class="hero-subtitle">Your one-stop shop for exquisite jewelry</p>
       <button class="btn-primary" onclick="learnMore()">Learn More</button>
     </div>
-  </section>
+  </section-->
+
+<!-- Hero Slideshow -->
+<section id="home" class="hero-section">
+  <div class="hero-slide active" style="background-image: url('images/hero1.jpg')">
+    <div class="hero-content">
+      <h1 class="hero-title">Elegant, Timeless Jewelry</h1>
+      <p class="hero-subtitle">Handcrafted pieces that tell your story</p>
+      <button class="btn-primary">Shop Now</button>
+    </div>
+  </div>
+
+  <div class="hero-slide" style="background-image: url('images/hero2.jpg')">
+    <div class="hero-content">
+      <h1 class="hero-title">Shine in Every Moment</h1>
+      <p class="hero-subtitle">Luxury made for everyday elegance</p>
+      <button class="btn-primary">Explore Collection</button>
+    </div>
+  </div>
+
+  <div class="hero-slide" style="background-image: url('images/hero3.jpg')">
+    <div class="hero-content">
+      <h1 class="hero-title">Bejeweled by TC</h1>
+      <p class="hero-subtitle">Where beauty meets meaning</p>
+      <button class="btn-primary">Learn More</button>
+    </div>
+  </div>
+</section>
+
+
+  
 
   <!-- About Section -->
   <section id="about" class="section about-section">
