--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <!-- Hero Slideshow -->
 <section id="home" class="hero-section">
-  <div class="hero-slide active" style="background-image: url('images/hero1.jpg')">
+  <div class="hero-slide active" style="background-image: url('images/hero.jpg')">
     <div class="hero-content">
       <h1 class="hero-title">Elegant, Timeless Jewelry</h1>
       <p class="hero-subtitle">Handcrafted pieces that tell your story</p>
@@ -42,7 +42,7 @@
     </div>
   </div>
 
-  <div class="hero-slide" style="background-image: url('images/hero2.jpg')">
+  <div class="hero-slide" style="background-image: url('images/hero1.jpg')">
     <div class="hero-content">
       <h1 class="hero-title">Shine in Every Moment</h1>
       <p class="hero-subtitle">Luxury made for everyday elegance</p>
@@ -50,7 +50,7 @@
     </div>
   </div>
 
-  <div class="hero-slide" style="background-image: url('images/hero3.jpg')">
+  <div class="hero-slide" style="background-image: url('images/hero2.jpg')">
     <div class="hero-content">
       <h1 class="hero-title">Bejeweled by TC</h1>
       <p class="hero-subtitle">Where beauty meets meaning</p>
