--- a/index.html
+++ b/index.html
@@ -32,29 +32,27 @@
     </div>
   </section-->
 
-<!-- Hero Slideshow -->
+<!-- Hero Section -->
 <section id="home" class="hero-section">
-  <div class="hero-slide active" style="background-image: url('hero.jpg')">
+  <div class="hero-slide active" style="background-image: url('hero.jpg');">
     <div class="hero-content">
-      <h1 class="hero-title">Elegant, Timeless Jewelry</h1>
-      <p class="hero-subtitle">Handcrafted pieces that tell your story</p>
-      <button class="btn-primary">Shop Now</button>
+      <h1 class="hero-title">Welcome to Bejeweled by TC</h1>
+      <p class="hero-subtitle">Your one-stop shop for exquisite jewelry</p>
+      <button class="btn-primary" onclick="learnMore()">Learn More</button>
     </div>
   </div>
-
-  <div class="hero-slide" style="background-image: url('hero1.jpg')">
+  <div class="hero-slide" style="background-image: url('hero1.jpg');">
     <div class="hero-content">
-      <h1 class="hero-title">Shine in Every Moment</h1>
-      <p class="hero-subtitle">Luxury made for everyday elegance</p>
-      <button class="btn-primary">Explore Collection</button>
+      <h1 class="hero-title">Discover Unique Pieces</h1>
+      <p class="hero-subtitle">Handcrafted with love and style</p>
+      <button class="btn-primary" onclick="learnMore()">Explore</button>
     </div>
   </div>
-
-  <div class="hero-slide" style="background-image: url('hero2.jpg')">
+  <div class="hero-slide" style="background-image: url('hero2.jpg');">
     <div class="hero-content">
-      <h1 class="hero-title">Bejeweled by TC</h1>
-      <p class="hero-subtitle">Where beauty meets meaning</p>
-      <button class="btn-primary">Learn More</button>
+      <h1 class="hero-title">Shine Bright Everyday</h1>
+      <p class="hero-subtitle">Jewelry that tells your story</p>
+      <button class="btn-primary" onclick="learnMore()">Shop Now</button>
     </div>
   </div>
 </section>
@@ -116,6 +114,7 @@
   </footer>
 
   <!-- Script -->
+  
   <script src="bejewled.js"></script>
 </body>
 </html>
