--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="hero-content">
       <h1 class="hero-title">Welcome to Bejeweled by TC</h1>
       <p class="hero-subtitle">Your one-stop shop for exquisite jewelry</p>
-      <button class="btn-primary" onclick="learnMore()">Learn More</button>
+     <a href="collections.html" class="btn-primary">Learn More</a>
     </div>
   </div>
   <div class="hero-slide" style="background-image: url('hero1.jpg');">
