--- a/index.html
+++ b/index.html
@@ -38,21 +38,21 @@
     <div class="hero-content">
       <h1 class="hero-title">Welcome to Bejeweled by TC</h1>
       <p class="hero-subtitle">Your one-stop shop for exquisite jewelry</p>
-     <a href="collections.html" class="btn-primary">Learn More</a>
+     <a href="collection.html" class="btn-primary">Learn More</a>
     </div>
   </div>
   <div class="hero-slide" style="background-image: url('hero1.jpg');">
     <div class="hero-content">
       <h1 class="hero-title">Discover Unique Pieces</h1>
       <p class="hero-subtitle">Handcrafted with love and style</p>
-      <button class="btn-primary" onclick="learnMore()">Explore</button>
+       <a href="collection.html" class="btn-primary">Explore</a>
     </div>
   </div>
   <div class="hero-slide" style="background-image: url('hero2.jpg');">
     <div class="hero-content">
       <h1 class="hero-title">Shine Bright Everyday</h1>
       <p class="hero-subtitle">Jewelry that tells your story</p>
-      <button class="btn-primary" onclick="learnMore()">Shop Now</button>
+       <a href="collection.html" class="btn-primary">Shop Now</a>
     </div>
   </div>
 </section>
